force-app/main/default/objects/Interview_Question__c/Interview_Question__c.object-meta.xml
<CustomObject>
    <label>Interview Question</label>
    <nameField>
        <label>Interview Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>