force-app/main/default/objects/Interview_Question__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Interview Questions</relationshipLabel>
    <relationshipName>Interview_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>