force-app/main/default/objects/Interview_Question__c/fields/Meeting_md__c.field-meta.xml
<CustomField>
    <fullName>Meeting_md__c</fullName>
    <label>Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Interview Questions (Meeting)</relationshipLabel>
    <relationshipName>Interview_Questions1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>