force-app/main/default/objects/Interview_Question__c/listViews/All_Questions.listView-meta.xml
<ListView>
    <fullName>All_Questions</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Questions</label>
</ListView>